--- a/package.json
+++ b/package.json
@@ -9,27 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.17.0",
-    "@react-navigation/native": "^6.0.13",
+    "@expo/metro-config": "^0.17.7",
+    "@expo/vector-icons": "^14.0.0",
+    "@expo/webpack-config": "~19.0.1",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
-    "expo": "~46.0.16",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.7",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.9",
+    "expo": "^50.0.17",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
     "react-native-animatable": "^1.3.3",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "tailwindcss-react-native": "^1.7.10"
+    "react-native-maps": "1.10.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "tailwindcss": "^3.2.1"
+    "@babel/core": "^7.20.0",
+    "autoprefixer": "^10.4.19",
+    "babel-preset-expo": "^10.0.2",
+    "metro-core": "^0.80.8",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.2.1",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "private": true
 }
